added user auth & registration