@@ -1,5 +1,7 @@
 package com.laurabailie.transactionservice.controller;
 
+import com.laurabailie.transactionservice.model.User;
+import com.laurabailie.transactionservice.service.UserService;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.security.Keys;
 import org.springframework.beans.factory.annotation.Value;
@@ -20,32 +22,64 @@ import java.util.Map;
 @RequestMapping("/api/auth")
 public class AuthController {
 
+    private final UserService userService;
+
     @Value("${jwt.secret}")
     private String jwtSecret;
 
     @Value("${jwt.expiration}")
     private long expirationMs;
 
-    @PostMapping("/login")
-    public ResponseEntity<?> login(@RequestBody Map<String, String> credentials) {
-        // TODO: Real auth (check username/password against DB)
-        // For demo: accept any non-empty credentials
+    // Constructor injection (best practice)
+    public AuthController(UserService userService) {
+        this.userService = userService;
+    }
+
+    @PostMapping("/register")
+    public ResponseEntity<String> register(@RequestBody Map<String, String> credentials) {
         String username = credentials.get("username");
-        if (username == null || username.isBlank()) {
-            return ResponseEntity.badRequest().body("Invalid credentials");
+        String password = credentials.get("password");
+
+        if (username == null || username.trim().isEmpty() ||
+            password == null || password.trim().isEmpty()) {
+            return ResponseEntity.badRequest().body("Username and password are required");
         }
 
-        SecretKey key = Keys.hmacShaKeyFor(jwtSecret.getBytes(StandardCharsets.UTF_8));
+        try {
+            userService.register(username.trim(), password.trim());
+            return ResponseEntity.ok("User registered successfully");
+        } catch (RuntimeException e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
+        }
+    }
 
-        Instant now = Instant.now();
-        String token = Jwts.builder()
-            .subject(username)
-            .claim("roles", "USER")  // Add real roles later
-            .issuedAt(Date.from(now))
-            .expiration(Date.from(now.plus(expirationMs, ChronoUnit.MILLIS)))
-            .signWith(key)
-            .compact();
+    @PostMapping("/login")
+    public ResponseEntity<?> login(@RequestBody Map<String, String> credentials) {
+        String username = credentials.get("username");
+        String password = credentials.get("password");
 
-        return ResponseEntity.ok(Map.of("token", token));
+        if (username == null || username.trim().isEmpty() ||
+            password == null || password.trim().isEmpty()) {
+            return ResponseEntity.badRequest().body("Username and password are required");
+        }
+
+        try {
+            User user = userService.login(username.trim(), password.trim());
+
+            SecretKey key = Keys.hmacShaKeyFor(jwtSecret.getBytes(StandardCharsets.UTF_8));
+
+            Instant now = Instant.now();
+            String token = Jwts.builder()
+                    .subject(user.getUsername())
+                    .claim("roles", user.getRole())           // Now comes from database!
+                    .issuedAt(Date.from(now))
+                    .expiration(Date.from(now.plus(expirationMs, ChronoUnit.MILLIS)))
+                    .signWith(key)
+                    .compact();
+
+            return ResponseEntity.ok(Map.of("token", token));
+        } catch (RuntimeException e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
+        }
     }
 }
